% display of score breakdown working

--- a/views/profile.html
+++ b/views/profile.html
@@ -104,14 +104,14 @@
                                 </tr>
                                 <tr>    
                                     <td>%</td>
-                                    <td id='ouchCount%'></td>
-                                    <td id='doubleBogeyCount%'></td>
-                                    <td id='bogeyCount%'></td>
-                                    <td id='parCount%'></td>
-                                    <td id='birdieCount%'></td>
-                                    <td id='eagleCount%'></td>
-                                    <td id='albatrosCount%'></td> 
-                                    <td id='aceCount%'></td>
+                                    <td id='ouchCountPercentage'></td>
+                                    <td id='doubleBogeyCountPercentage'></td>
+                                    <td id='bogeyCountPercentage'></td>
+                                    <td id='parCountPercentage'></td>
+                                    <td id='birdieCountPercentage'></td>
+                                    <td id='eagleCountPercentage'></td>
+                                    <td id='albatrosCountPercentage'></td> 
+                                    <td id='aceCountPercentage'></td>
                                 </tr>  
                             </tbody>
                         </table>
