--- a/views/profile.html
+++ b/views/profile.html
@@ -11,6 +11,9 @@
         <script src="/static/javascript/profile.js"></script>
         <link rel="stylesheet" type="text/css" href="/static/css/newscore.css">
 
+        <script src='/vendor/Chart.js/Chart.min.js'></script>
+        <script src="/vendor/Chart.js/Chart.js"></script>
+
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     </head>
     <body>
@@ -118,6 +121,7 @@
                 </div>
 
 
+            <canvas id="canvas" width="100" height="50"></canvas>
 
 
 
