--- a/views/course.html
+++ b/views/course.html
@@ -4,20 +4,22 @@
     <head>
         <meta charset="utf-8">
         <title>Course Performance</title>
+        
         <script src="/vendor/jquery/dist/jquery.min.js"></script>
         <script src="/vendor/underscore/underscore-min.js"></script>
         <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.min.css">
         <script src="/static/javascript/course.js"></script>
-        <script src="Chart.js"></script>
+        <script src='/vendor/Chart.js/Chart.min.js'></script>
+        <script src="/vendor/Chart.js/Chart.js"></script>
+        <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+
+        <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.min.css">        
         <link rel="stylesheet" type="text/css" href="/static/css/newscore.css">
 
-        <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
+
     </head>
     <body>
     <div class='container'>
-
-
 
           <!-- NAVBAR AT TOP OF PAGE -->
 
@@ -249,8 +251,7 @@
                         </table>
                 </div><br>
 
-
-<!--                 <canvas id="myChart" width="400" height="400"></canvas><br> -->
+                <canvas id="canvas" width="50" height="25"></canvas><br><br>
 
 
                 <!-- RECENT SCORES TABLE -->
@@ -297,6 +298,46 @@
                     <td> <%= totalPutts %> </td>
                     <td> <div class="btn-group btn-group-xs close" role="group" aria-label="..." onclick='deleteScore(this)' data-id=<%= _id %> >X</div> </td>
                 </tr>
+
+      </script>
+
+      <script>
+
+            // // var randomScalingFactor = function(){ return Math.round(Math.random()*100)};
+            // var lineChartData = {
+            //     labels : ["January","February","March","April","May","June","July"],
+            //     datasets : [
+            //         {
+            //             label: "My First dataset",
+            //             fillColor : "rgba(220,220,220,0.2)",
+            //             strokeColor : "rgba(220,220,220,1)",
+            //             pointColor : "rgba(220,220,220,1)",
+            //             pointStrokeColor : "#fff",
+            //             pointHighlightFill : "#fff",
+            //             pointHighlightStroke : "rgba(220,220,220,1)",
+            //             data : [1, 34, 12, 23, 32, 23, 14]
+            //         },
+            //         {
+            //             label: "My Second dataset",
+            //             fillColor : "rgba(151,187,205,0.2)",
+            //             strokeColor : "rgba(151,187,205,1)",
+            //             pointColor : "rgba(151,187,205,1)",
+            //             pointStrokeColor : "#fff",
+            //             pointHighlightFill : "#fff",
+            //             pointHighlightStroke : "rgba(151,187,205,1)",
+            //             data : [23, 15, 62, 13, 43, 13, 43]
+            //         }
+            //     ]
+            // }
+
+
+            // window.onload = function(){
+            //     var ctx = document.getElementById("canvas").getContext("2d");
+            //     window.myLine = new Chart(ctx).Line(lineChartData, {
+            //         responsive: true
+            //     });
+            // }
+
       </script>
 
 
