--- a/views/profile.html
+++ b/views/profile.html
@@ -121,8 +121,9 @@
                 </div>
 
 
-            <canvas id="canvas" width="800" height="400"></canvas>
-
+            <div class='col-xs-12 col-md-12 col-lg-6'>
+                <canvas id="canvas" width="800" height="400"></canvas>
+            </div>
 
 
 
