--- a/views/fullScoresList.html
+++ b/views/fullScoresList.html
@@ -8,7 +8,7 @@
         <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.min.css">
         <script src="/static/javascript/scorelist.js"></script>
-        <link rel="stylesheet" type="text/css" href="/static/css/newscore.css">
+        <link rel="stylesheet" type="text/css" href="/static/css/index.css">
 
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     </head>
@@ -54,10 +54,10 @@
 
                 <!-- RECENT SCORES TABLE -->
                 <div class="panel panel-default">
-                    <div class="panel-heading">Record of Rounds Played:</div>
+                    <div class="featureHeader panel-heading">Record of Rounds Played:</div>
                         <table class="table" >
                             <thead>
-                                <tr>
+                                <tr class="featureHeader2">
                                     <td>Date</td>
                                     <td>Course</td>
                                     <td>Gross Score</td>
