--- a/views/myCourses.html
+++ b/views/myCourses.html
@@ -8,7 +8,7 @@
         <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.min.css">
         <script src="/static/javascript/courselist.js"></script>
-        <link rel="stylesheet" type="text/css" href="/static/css/newscore.css">
+        <link rel="stylesheet" type="text/css" href="/static/css/index.css">
 
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     </head>
@@ -54,10 +54,10 @@
 
 
                 <div class='list-group' id='courseList-placeholder'>
-                        <p class='list-group-item disabled'>Select your course:</p>
+                        <p class='featureHeader list-group-item disabled'>Select your course:</p>
                 </div>
 
-                <div class="well well-sm"><a href='/scorecard'>Add a scorecard for a new course</a></div>
+                <div class="featureHeader2 well well-sm"><a href='/scorecard'>Add a scorecard for a new course</a></div>
 
 
 
