--- a/views/scorePage.html
+++ b/views/scorePage.html
@@ -9,7 +9,7 @@
         <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.min.css">
         <script src="/static/javascript/scorepage.js"></script>
-        <link rel="stylesheet" type="text/css" href="/static/css/newscore.css">
+        <link rel="stylesheet" type="text/css" href="/static/css/index.css">
 
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     </head>
@@ -60,10 +60,9 @@
 
 
                 <div class="panel panel-default">
-                    <!-- <div id='courseName' class="panel-heading">Course Name:   </div> -->
-                        <table class="table" >
+                        <table class="table">
                             <thead>
-                                <tr class="panel-heading">
+                                <tr class="featureHeader panel-heading">
                                     <td>Hole</td>
                                     <td>Par</td>
                                     <td>Yardage</td>
@@ -217,7 +216,7 @@
                                     <td id='putts18'></td>
                                     <td id='nett18'></td>
                                 </tr>
-                                <tr>
+                                <tr class='featureHeader2'>
                                     <td>Total</td>
                                     <td id='parTotal'></td>
                                     <td id='yardageTotal'></td>
