--- a/views/course.html
+++ b/views/course.html
@@ -14,7 +14,7 @@
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
 
         <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.min.css">        
-        <link rel="stylesheet" type="text/css" href="/static/css/newscore.css">
+        <link rel="stylesheet" type="text/css" href="/static/css/index.css">
 
 
     </head>
@@ -62,10 +62,10 @@
         <h5 id='lastGameDate'>Date of Last Round: </h5><br>       
                 <!-- RECENT SCORES TABLE -->
                 <div class="panel panel-default">
-                    <div class="panel-heading">Performance Summary:</div>
+                    <div class="featureHeader panel-heading">Performance Summary:</div>
                         <table class="table" >
                             <thead>
-                                <tr>
+                                <tr class='featureHeader2'>
                                     <td></td>
                                     <td>Gross</td>
                                     <td>Putts</td>
@@ -100,10 +100,10 @@
 
                 <!-- RECENT SCORES TABLE -->
                 <div class="panel panel-default">
-                    <div class="panel-heading">Performance by Hole:</div>
+                    <div class="featureHeader panel-heading">Performance by Hole:</div>
                         <table class="table" >
                             <thead>
-                                <tr>
+                                <tr class='featureHeader2'>
                                     <td>Hole</td>
                                     <td>1</td>
                                     <td>2</td>
@@ -169,7 +169,7 @@
                                     <td id='avgPutts9'></td>
                                     <td id='front9avgPutts'></td>                                    
                                 </tr>                                
-                                <tr class="panel-footer">
+<!--                                 <tr class="panel-footer">
                                     <td></td>                                  
                                     <td></td>
                                     <td></td>
@@ -181,8 +181,8 @@
                                     <td></td>
                                     <td></td>
                                     <td></td>
-                                </tr>
-                                <tr>
+                                </tr> -->
+                                <tr class="featureHeader2">
                                     <td></td>
                                     <td>10</td>
                                     <td>11</td>
@@ -251,12 +251,17 @@
                         </table>
                 </div><br>
 
-                <canvas id="canvas" width="50" height="25"></canvas><br><br>
 
 
-                <!-- RECENT SCORES TABLE -->
+                <div id='courseGraph'>
+                    <canvas id="canvas"></canvas><br><br>
+                </div>
+
+
+
+                <!-- ALL SCORES ON COURSE TABLE -->
                 <div class="panel panel-default">
-                    <div class="panel-heading">Rounds Played:</div>
+                    <div class="featureHeader panel-heading">Rounds Played:</div>
                         <table class="table" >
                             <thead>
                                 <tr>
@@ -268,7 +273,7 @@
                             </thead>
                             <tbody id='rounds-placeholder'></tbody>
                         </table>
-                    <div class="panel-footer"><a href="/scorelist">View All Your Scores</a></div>
+                    <div class="featureHeader2 panel-footer"><a href="/scorelist">View All Your Scores</a></div>
                 </div><br>
 
 
