--- a/views/login.html
+++ b/views/login.html
@@ -9,7 +9,7 @@
         <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.min.css">
         <script src="/static/javascript/login.js"></script>
-        <link rel="stylesheet" type="text/css" href="/static/css/newscore.css">
+        <link rel="stylesheet" type="text/css" href="/static/css/index.css">
         <link href="css/YTPlayer.css" media="all" rel="stylesheet" type="text/css">
 
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
@@ -26,7 +26,7 @@
                         <form method='POST' action='/login'>
                             <input placeholder="E-Mail Address" class="form-control" type="text" name='email' required='true'>
                             <input placeholder="Password" class="form-control" type="password" name='password' required='true'>
-                            <button class="btn btn-default">Login</button>
+                            <button class="loginBtn btn btn-default">Login</button>
                         </form>
                     </div>
                 </div>
