--- a/views/newCourseInfo.html
+++ b/views/newCourseInfo.html
@@ -9,7 +9,7 @@
         <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.min.css">
         <script src="/static/javascript/newscore.js"></script>
-        <link rel="stylesheet" type="text/css" href="/static/css/newscore.css">
+        <link rel="stylesheet" type="text/css" href="/static/css/index.css">
 
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     </head>
@@ -54,7 +54,7 @@
             <form method='POST' action='/scorecard' id='new-course'>
 
             <div class="input-group input-group">
-                <span class="input-group-addon" id="sizing-addon1">Name of Course:</span>
+                <span class="featureHeader input-group-addon" id="sizing-addon1">Name of Course:</span>
                 <input type="text" name='coursename' class="form-control" placeholder="Submit the Name of Golf Course Here" aria-describedby="sizing-addon2" required='true'>
             </div><br>
                 <table class='table'>
@@ -65,23 +65,23 @@
 
                                         <!-- Par for Holes 1 - 9 -->
 
-                                        <input type="number" name='par[]' id='1' class="form-control" placeholder="1st hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+                                        <input type="number" name='par[]' id='1' class="form-control" placeholder="1st hole Par" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
 
-                                        <input type="number" name='par[]' id='2' class="form-control" placeholder="2nd hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+                                        <input type="number" name='par[]' id='2' class="form-control" placeholder="2nd hole Par" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
 
-                                        <input type="number" name='par[]' id='3' class="form-control" placeholder="3rd hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+                                        <input type="number" name='par[]' id='3' class="form-control" placeholder="3rd hole Par" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
 
-                                        <input type="number" name='par[]' id='4' class="form-control" placeholder="4th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+                                        <input type="number" name='par[]' id='4' class="form-control" placeholder="4th hole Par" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
 
-                                        <input type="number" name='par[]' id='5' class="form-control" placeholder="5th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+                                        <input type="number" name='par[]' id='5' class="form-control" placeholder="5th hole Par" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
 
-                                        <input type="number" name='par[]' id='6' class="form-control" placeholder="6th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+                                        <input type="number" name='par[]' id='6' class="form-control" placeholder="6th hole Par" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
 
-                                        <input type="number" name='par[]' id='7' class="form-control" placeholder="7th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+                                        <input type="number" name='par[]' id='7' class="form-control" placeholder="7th hole Par" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
 
-                                        <input type="number" name='par[]' id='8' class="form-control" placeholder="8th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+                                        <input type="number" name='par[]' id='8' class="form-control" placeholder="8th hole Par" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
 
-                                        <input type="number" name='par[]' id='9' class="form-control" placeholder="9th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+                                        <input type="number" name='par[]' id='9' class="form-control" placeholder="9th hole Par" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
 
                                 </div>
 
@@ -89,23 +89,23 @@
 
                                         <!-- Yardage for Holes 1 - 9 -->
 
-                                        <input type="number" name='yardage[]' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
+                                        <input type="number" name='yardage[]' class="form-control" placeholder="Distance" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='yardage[]' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
+                                        <input type="number" name='yardage[]' class="form-control" placeholder="Distance" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='yardage[]' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
+                                        <input type="number" name='yardage[]' class="form-control" placeholder="Distance" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='yardage[]' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
+                                        <input type="number" name='yardage[]' class="form-control" placeholder="Distance" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='yardage[]' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
+                                        <input type="number" name='yardage[]' class="form-control" placeholder="Distance" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='yardage[]' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
+                                        <input type="number" name='yardage[]' class="form-control" placeholder="Distance" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='yardage[]' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
+                                        <input type="number" name='yardage[]' class="form-control" placeholder="Distance" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='yardage[]' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
+                                        <input type="number" name='yardage[]' class="form-control" placeholder="Distance" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='yardage[]' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
+                                        <input type="number" name='yardage[]' class="form-control" placeholder="Distance" aria-describedby="sizing-addon2" required='false'>
 
                                 </div>
 
@@ -114,23 +114,23 @@
 
                                         <!-- Par for Holes 1 - 9 -->
 
-                                        <input type="number" name='par[]' id='10' class="form-control" placeholder="10th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+                                        <input type="number" name='par[]' id='10' class="form-control" placeholder="10th hole Par" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
 
-                                        <input type="number" name='par[]' id='11' class="form-control" placeholder="11th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+                                        <input type="number" name='par[]' id='11' class="form-control" placeholder="11th hole Par" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
 
-                                        <input type="number" name='par[]' id='12' class="form-control" placeholder="12th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+                                        <input type="number" name='par[]' id='12' class="form-control" placeholder="12th hole Par" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
 
-                                        <input type="number" name='par[]' id='13' class="form-control" placeholder="13th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+                                        <input type="number" name='par[]' id='13' class="form-control" placeholder="13th hole Par" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
 
-                                        <input type="number" name='par[]' id='14' class="form-control" placeholder="14th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+                                        <input type="number" name='par[]' id='14' class="form-control" placeholder="14th hole Par" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
 
-                                        <input type="number" name='par[]' id='15' class="form-control" placeholder="15th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+                                        <input type="number" name='par[]' id='15' class="form-control" placeholder="15th hole Par" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
 
-                                        <input type="number" name='par[]' id='16' class="form-control" placeholder="16th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+                                        <input type="number" name='par[]' id='16' class="form-control" placeholder="16th hole Par" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
 
-                                        <input type="number" name='par[]' id='17' class="form-control" placeholder="17th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+                                        <input type="number" name='par[]' id='17' class="form-control" placeholder="17th hole Par" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
 
-                                        <input type="number" name='par[]' id='18' class="form-control" placeholder="18th hole" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
+                                        <input type="number" name='par[]' id='18' class="form-control" placeholder="18th hole Par" aria-describedby="sizing-addon2" min='3' max='5' required='true'>
 
                                 </div>
 
@@ -138,23 +138,23 @@
 
                                         <!-- Yardage for Holes 10 - 18 -->
 
-                                        <input type="number" name='yardage[]' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
+                                        <input type="number" name='yardage[]' class="form-control" placeholder="Distance" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='yardage[]' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
+                                        <input type="number" name='yardage[]' class="form-control" placeholder="Distance" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='yardage[]' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
+                                        <input type="number" name='yardage[]' class="form-control" placeholder="Distance" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='yardage[]' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
+                                        <input type="number" name='yardage[]' class="form-control" placeholder="Distance" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='yardage[]' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
+                                        <input type="number" name='yardage[]' class="form-control" placeholder="Distance" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='yardage[]' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
+                                        <input type="number" name='yardage[]' class="form-control" placeholder="Distance" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='yardage[]' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
+                                        <input type="number" name='yardage[]' class="form-control" placeholder="Distance" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='yardage[]' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
+                                        <input type="number" name='yardage[]' class="form-control" placeholder="Distance" aria-describedby="sizing-addon2" required='false'>
 
-                                        <input type="number" name='yardage[]' class="form-control" placeholder="Yardage" aria-describedby="sizing-addon2" required='false'>
+                                        <input type="number" name='yardage[]' class="form-control" placeholder="Distance" aria-describedby="sizing-addon2" required='false'>
 
                                 </div>
 
