--- a/views/newScore.html
+++ b/views/newScore.html
@@ -9,7 +9,7 @@
         <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.min.css">
         <script src="/static/javascript/newscore.js"></script>
-        <link rel="stylesheet" type="text/css" href="/static/css/newscore.css">
+        <link rel="stylesheet" type="text/css" href="/static/css/index.css">
 
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     </head>
@@ -57,18 +57,18 @@
           <form method='POST' action='/:course/newscore' id='new-score'>
 
             <div class="input-group input-group">
-                <span class="input-group-addon" id="sizing-addon1">Date of Game:</span>
+                <span class="featureHeader input-group-addon" id="sizing-addon1">Date of Game:</span>
                 <input placeholder="Please Select" class="form-control" type="date" onfocus="(this.type='date')" onblur="(this.type='text')" id="date" name='date' required='true'>             
             </div><br>
 
             <div class="input-group input-group">
-                <span class="input-group-addon" id="sizing-addon1">Playing Partners:</span>
+                <span class="featureHeader input-group-addon" id="sizing-addon1">Playing Partners:</span>
                 <input placeholder="Please enter names (optional)" class="form-control" type="text" name='playingPartners' required='false'>                
             </div><br>
 
             <div class="input-group input-group">
-                <span class="input-group-addon" id="sizing-addon1">Notes on the Round:</span>
-                <input placeholder="Weather Conditions? Driving Performance? Green Conditions?  (optional)" class="form-control" type="text" name='comments' required='false'>                
+                <span class="featureHeader input-group-addon" id="sizing-addon1">Notes on the Round:</span>
+                <input placeholder="Weather Conditions? Driving Performance? Green Conditions?  (Optional)" class="form-control" type="text" name='comments' required='false'>                
             </div><br>
 
 
