--- a/views/profile.html
+++ b/views/profile.html
@@ -9,10 +9,11 @@
         <script src="/vendor/bootstrap/dist/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.min.css">
         <script src="/static/javascript/profile.js"></script>
-        <link rel="stylesheet" type="text/css" href="/static/css/newscore.css">
+        <link rel="stylesheet" type="text/css" href="/static/css/index.css">
 
         <script src='/vendor/Chart.js/Chart.min.js'></script>
         <script src="/vendor/Chart.js/Chart.js"></script>
+        <link href='https://fonts.googleapis.com/css?family=Pontano+Sans' rel='stylesheet' type='text/css'>
 
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
     </head>
@@ -31,20 +32,20 @@
                   <span class="icon-bar"></span>
                   <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">i.Caddy</a>
+                <a class="navbar-brand" href="/profile">i.Caddy</a>
               </div>
 
               <!-- Collect the nav links, forms, and other content for toggling -->
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                 <ul class="nav navbar-nav navbar-right">
-                  <li><a href="/profile">My Profile</a></li>
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Golfer Options<span class="caret"></span></a>
+                  <li class='navbarHover'><a href="/profile">PROFILE</a></li>
+                  <li class="dropdown navbarHover">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">OPTIONS<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                       <li><a href="/mycourses">Submit A New Score</a></li>
                       <li><a href="/scorelist">View All Scores</a></li>
-                      <li><a href="/scorecard">Create a New Scorecard Template</a></li>
+                      <li><a href="/scorecard">New Scorecard Template</a></li>
                       <li role="separator" class="divider"></li>
                       <li><a href="/logout">Logout</a></li>
                     </ul>
@@ -56,32 +57,34 @@
             
 
                 <!-- RECENT SCORES TABLE -->
+
                 <div class="panel panel-default">
-                    <div class="panel-heading">Your Most Recent Rounds:</div>
-                        <table class="table" >
+                    <div class="featureHeader panel-heading">Most Recent Rounds:</div>
+                        <table class="table">
                             <thead>
-                                <tr>
+                                <tr class='featureHeader2'>
                                     <td>Date</td>
                                     <td>Course</td>
                                     <td>Gross Score</td>
                                     <td>No. of Putts</td>
-                                    <td>Delete</td>
+                                    <td>Delete Round</td>
                                 </tr>
                             </thead>
                             <tbody id='scores-placeholder'></tbody>
                         </table>
-                    <div class="panel-footer"><a href="/scorelist">View All Your Scores</a></div>
+                    <div class="featureHeader2 panel-footer"><a href="/scorelist">View All Your Scores</a></div>
                 </div>
 
 
 
 
                 <!-- PAR / BIRDIDE / BOGEY COUNT -->
+
                 <div class="panel panel-default">
-                    <div class="panel-heading">Score Breakdown:</div>
-                        <table class="table" >
+                    <div class="featureHeader panel-heading">Score Breakdown:</div>
+                        <table class="table">
                             <thead>
-                                <tr>
+                                <tr class='featureHeader2'>
                                     <td></td>
                                     <td>Ouch...</td>
                                     <td>Double Bogey's</td>
@@ -139,7 +142,7 @@
       <!-- Recent Scores Template -->
       <script type="text/template" id="scores-template">
                 
-                <tr>
+                <tr class='roundHover'>
                     <td> <% var d = new Date(date), 
                                 fragments = [
                                         d.getDate(),
