--- a/views/scorePage.html
+++ b/views/scorePage.html
@@ -35,15 +35,15 @@
               <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 
                 <ul class="nav navbar-nav navbar-right">
-                  <li><a href="/profile">My Profile</a></li>
-                  <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Golfer Options<span class="caret"></span></a>
+                  <li><a href="/profile class='navbarHover'">PROFILE</a></li>
+                  <li class="dropdown navbarHover">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">OPTIONS<span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                      <li><a href="/mycourses">Submit A New Score</a></li>
-                      <li><a href="/scorelist">View All Scores</a></li>
-                      <li><a href="/scorecard">Create a New Scorecard Template</a></li>
+                      <li><a href="/mycourses" class='navbarHover'>Submit A New Score</a></li>
+                      <li><a href="/scorelist" class='navbarHover'>View All Scores</a></li>
+                      <li><a href="/scorecard" class='navbarHover'>Create a New Scorecard Template</a></li>
                       <li role="separator" class="divider"></li>
-                      <li><a href="/logout">Logout</a></li>
+                      <li><a href="/logout" class='navbarHover'>Logout</a></li>
                     </ul>
                   </li>
                 </ul>
