--- a/views/login.html
+++ b/views/login.html
@@ -10,6 +10,7 @@
         <link rel="stylesheet" href="/vendor/bootstrap/dist/css/bootstrap.min.css">
         <script src="/static/javascript/login.js"></script>
         <link rel="stylesheet" type="text/css" href="/static/css/index.css">
+        <link rel="stylesheet" type="text/css" href="/static/css/login.css">
         <link href="css/YTPlayer.css" media="all" rel="stylesheet" type="text/css">
 
         <script type="text/javascript" src="http://code.jquery.com/jquery-2.1.3.min.js"></script>
@@ -20,14 +21,17 @@
 
         <div class='player' id="bgndVideo" data-property="{videoURL:'https://www.youtube.com/watch?v=kgeYE-ogpb0',containment:'body',autoPlay:true, mute:true, startAt:0, opacity:1}">
 
-            <div class='container'>
+            <div class='container userInfo'>
                 <div class='row'> 
                     <div class='col-xs-8 col-xs-offset-2 col-md-6 col-md-offset-3'> 
                         <form method='POST' action='/login'>
-                            <input placeholder="E-Mail Address" class="form-control" type="text" name='email' required='true'>
-                            <input placeholder="Password" class="form-control" type="password" name='password' required='true'>
-                            <button class="loginBtn btn btn-default">Login</button>
+                            <input placeholder="E-Mail Address" class="form-control" type="text" name='email' required='true'><br>
+                            <input placeholder="Password" class="form-control" type="password" name='password' required='true'><br><br>
+                            <button class="userInfoBtn btn btn-default col-md-12">Login</button>
                         </form>
+                        
+                            <br>
+                            <p><a href='/signup'>Sign Up Now</a></p>
                     </div>
                 </div>
             </div>
